--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
-
+DATABASE_URL=postgresql://viktoriya@localhost:5433/dronedelivery_db
+APP_NAME=DroneDelivery API
+DEBUG=True
+SECRET_KEY=KN11t-wqe3oZWMY-QDBQDVSogyUCQAOSGqYR_9htDVY
